<resources>
    <string name="app_name">Eyecare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_worker">Workers</string>

    <string name="menu_lampu">Lampu Remote</string>
    <string name="menu_lokasi">GPS Tracker</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_camera">Camera</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_workers">Workers</string>

    <string name="eyecare">EYECARE</string>
    <string name="punch_line">Ai in your hand</string>
    <string name="menu_setting">Setting</string>

    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_profile">Profile Activity</string>
    <string name="title_setting">Setting Activity</string>
    <string name="hint_user">Gmail / Username</string>
    <string name="text_less_6">Password Less Than 6</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="google">GOOGLE</string>
    <string name="hint_nama">Nama</string>
    <string name="menu_workers">Workers</string>
    <string name="menu_iot">IOT</string>
    <string name="hint_password">Password</string>


    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when there are `not safe` people.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>
    <string name="title_activity_add_lokasi">AddLokasiActivity</string>

</resources>